bad/assign_literal_int_class.example_compiler_output
ERROR
[1mbad/assign_literal_int_class.lat:6:5: [1;31merror: [0;1mleft side is not assignable[m
	42 = new Y;
	   [1;32m^[m
[1mbad/assign_literal_int_class.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	42 = new Y;
	[1;32m^[m
